[CROSS-PLATFORM] Added template for tcp-server

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,3 +1,4 @@
 ﻿add_subdirectory("net-utils")
 add_subdirectory("thread-utils")
 add_subdirectory("shared-data")
+add_subdirectory("tcp-server-mp")
