--- a/libs/thread-utils/CMakeLists.txt
+++ b/libs/thread-utils/CMakeLists.txt
@@ -1,5 +1,7 @@
 ﻿project("thread-utils")
 
+include_directories(include)
+
 # Include FetchContent
 include(FetchContent)
 
@@ -10,18 +12,31 @@ FetchContent_Declare(
         GIT_TAG        master
 )
 
-FetchContent_MakeAvailable(tinycthread)
+FetchContent_Declare(
+        c_threadpool
+        GIT_REPOSITORY https://github.com/Pithikos/C-Thread-Pool.git
+        GIT_TAG        master
+)
 
-file(GLOB SRC ${tinycthread_SOURCE_DIR}/source/*.c ${tinycthread_SOURCE_DIR}/source/*.cpp ${tinycthread_SOURCE_DIR}/source/*.cxx)
+FetchContent_MakeAvailable(tinycthread c_threadpool)
 
-add_library(${PROJECT_NAME} ${SRC})
+file(GLOB SRC ${tinycthread_SOURCE_DIR}/source/*.c ${c_threadpool_SOURCE_DIR}/*.c)
+
+add_library(${PROJECT_NAME} ${SRC}
+        include/thread-utils.h)
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
   set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 17)
 endif()
 
-target_include_directories(${PROJECT_NAME} INTERFACE ${tinycthread_SOURCE_DIR}/source)
+target_include_directories(
+        ${PROJECT_NAME}
+        PUBLIC
+        ${tinycthread_SOURCE_DIR}/source
+        ${c_threadpool_SOURCE_DIR}
+        ${PROJECT_SOURCE_DIR}/include
+)
 
 if(APPLE OR UNIX)
   find_package(Threads REQUIRED)
