Commented thread pool. Fixed win 32 build

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,7 @@
 ﻿if(WIN32)
 	set(COMMON_DEPENDENCIES wsock32 ws2_32)
+else()
+	set(COMMON_DEPENDENCIES pthread m)
 endif()
 
 set(SHARED_LIBS net-utils thread-utils shared-data)
